--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Mini Store</title>
+  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -86,8 +86,12 @@
     </div>
 </section>
 <section>
-  <div class="sidebar">
-    <div id="cart-details"></div>
+  <div class="sidebar container-fluid">
+    <div class="row">
+    <div id="cart-details" class="col-sm-4 d-flex gap-5">
+
+    </div>
+  </div>
 
     <h3 style="margin-top:20px;">Total Amount: <span id="total-amount">$0</span></h3>
   
