--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <span id="close" onclick="displaygone()">close</span>
     <div><button class="btn btn-success" onclick="placeorder()" style="margin-top: 120px;">Place Order</button>
     </div>
-    <div class="mt-2"><span style="font-style: italic;">Cards we accept</span><br><img src="/img/payments.png" alt="img"></div></div>
+    <div class="mt-2"><span style="font-style: italic;">Cards we accept</span><br><img src="img/payments.png" alt="img"></div></div>
 
   </div>
 
