--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
          style="background-color: rgba(0, 0, 0, 0.2)"
          >
       © 2024 Copyright:
-      <a class="text-white" href="https://sushil8383.github.io/ministore"
+      <a class="text-white" href="https://sushil8383.github.io/skfashion"
          >skfashion.com</a
         >
     </div>
