--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Sk Fashion</title>
-  <link rel="icon" type="image/x-icon" href="/img/cat-1.jpg">
+  <link rel="icon" type="image/x-icon" href="img/cat-1.jpg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
