--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
 
         <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="https://contactsushil.netlify.app/">Contact</a>
           </li>
     
       </ul>
