--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         
 
         <li class="nav-item">
-            <a class="nav-link" href="https://contactsushil.netlify.app/">Contact</a>
+            <a class="nav-link" href="https://contactsushil.netlify.app/" target="_blank">Contact</a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="https://sushil8383.github.io/itsmesushil/Portfolio" target="_blank">About us</a>
           </li>
     
       </ul>
